--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Proyecto 1</title>
 </head>
 <body>
-    <a>hola mundo</a>
+    <div class="flex_container">
+        <div class="flex_child">1</div>
+        <div class="flex_child">2</div>
+        <div class="flex_child">3</div>
+        <div class="flex_child">4</div>
+    </div>
 </body>
 </html>
