--- a/index.html
+++ b/index.html
@@ -8,10 +8,30 @@
 </head>
 <body>
     <div class="flex_container">
-        <div class="flex_child">1</div>
-        <div class="flex_child">2</div>
-        <div class="flex_child">3</div>
-        <div class="flex_child">4</div>
+        <div class="flex_child">
+            <div>1.1</div>
+            <div>1.2</div>
+            <div>1.3</div>
+            <div>1.4</div>
+        </div>
+        <div class="flex_child">
+            <div>2.1</div>
+            <div>2.2</div>
+            <div>2.3</div>
+            <div>2.4</div>
+        </div>
+        <div class="flex_child">
+            <div>3.1</div>
+            <div>3.2</div>
+            <div>3.3</div>
+            <div>3.4</div>
+        </div>
+        <div class="flex_child">
+            <div>4.1</div>
+            <div>4.2</div>
+            <div>4.3</div>
+            <div>4.4</div>
+        </div>
     </div>
 </body>
 </html>
