--- a/index.html
+++ b/index.html
@@ -4,34 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Proyecto 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="flex_container">
-        <div class="flex_child">
-            <div>1.1</div>
-            <div>1.2</div>
-            <div>1.3</div>
-            <div>1.4</div>
-        </div>
-        <div class="flex_child">
-            <div>2.1</div>
-            <div>2.2</div>
-            <div>2.3</div>
-            <div>2.4</div>
-        </div>
-        <div class="flex_child">
-            <div>3.1</div>
-            <div>3.2</div>
-            <div>3.3</div>
-            <div>3.4</div>
-        </div>
-        <div class="flex_child">
-            <div>4.1</div>
-            <div>4.2</div>
-            <div>4.3</div>
-            <div>4.4</div>
-        </div>
-    </div>
+    
 </body>
 </html>
