--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="nav">
+        <div class="nav_elementos">Inicio</div>
+        <div class="nav_elementos">Sobre Nosotros</div>
+        <div class="nav_elementos">Ayuda</div>
+        <div class="nav_elementos">Contacto</div>
+    </div>
+
+    <div class="contenedor_flex">
+        <div class="flex_columnas">
+            Empleados
+        </div>
+        <div class="flex_columnas">
+            Visitantes
+        </div>
+        <div id="soporte">
+            <a href="">En caso de no poder hacer registro como empleado por favor contacte a soporte.</a>
+        </div>
+    </div>
+
+    <footer>
+        &copy; copyright 2025
+    </footer>
 </body>
 </html>
