--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         </div>
     </div>
 
+        <div class="login-box">
+            <h2>Login</h2>
+            <form>
+                <div class="user-box">
+                <input type="text" name="" required="">
+                <label>Username</label>
+                </div>
+                <div class="user-box">
+                <input type="password" name="" required="">
+                <label>Password</label>
+                </div>
+            </form>
+        </div>
+
     <footer>
         &copy; copyright 2025
     </footer>
